# sierradb

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  bucket-decoder.html  cluster.kdl  debug_fuzzer.md  default.nix  flake.nix  rustfmt.toml  sierra.cluster.toml  sierra.default.toml  sierra.single-node.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yaml
crates/seglog/: Cargo.toml  README.md
crates/seglog/benches/: seglog_bench.rs
crates/seglog/src/: lib.rs  parse.rs  read.rs  write.rs
crates/sierradb/: Cargo.toml
crates/sierradb-client/: Cargo.toml
crates/sierradb-client/examples/: cbor.rs  comprehensive_test.rs  get.rs  hello.rs  subscription.rs
crates/sierradb-client/src/: commands.rs  error.rs  lib.rs  macros.rs  options.rs  subscription.rs  types.rs
crates/sierradb-cluster/: Cargo.toml
crates/sierradb-cluster/examples/: dump-confirmations.rs
crates/sierradb-cluster/src/: behaviour.rs  circuit_breaker.rs  confirmation.rs  error.rs  lib.rs  main.rs  partition_actor.rs  read.rs  subscription.rs  swarm.rs  swarm_actor.rs  transaction.rs  transaction_actor.rs  write.rs  write_actor.rs
crates/sierradb-cluster/src/confirmation/: actor.rs  actor_old.rs
crates/sierradb-cluster/src/partition_consensus/: behaviour.rs  manager.rs  messages.rs  mod.rs
crates/sierradb-cluster/src/subscription/: manager.rs
crates/sierradb-cluster/src/swarm/: actor.rs  mod.rs  read_manager.rs  write.rs  write_manager.rs
crates/sierradb-cluster/src/write/: confirm.rs  error.rs  execute.rs  ordered_queue.rs  replicate.rs  timeout_ordered_queue.rs  transaction.rs
crates/sierradb-cluster2/: Cargo.toml
crates/sierradb-cluster2/src/: behaviour.rs  lib.rs  swarm.rs  swarm_1.rs  write_actor.rs
crates/sierradb-cluster2/src/confirmation/: actor.rs
crates/sierradb-cluster2/src/partition_consensus/: behaviour.rs  store.rs
crates/sierradb-cluster2/src/swarm/: write_manager.rs
crates/sierradb-protocol/: Cargo.toml
crates/sierradb-protocol/src/: error.rs  lib.rs
crates/sierradb-server/: Cargo.toml
crates/sierradb-server/src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  parser.rs  request.rs  server.rs  value.rs
crates/sierradb-server/src/request/: eack.rs  eappend.rs  eget.rs  emappend.rs  epack.rs  epscan.rs  epseq.rs  epsub.rs  escan.rs  esub.rs  esver.rs  hello.rs  info.rs  ping.rs
crates/sierradb-topology/: Cargo.toml
crates/sierradb-topology/src/: behaviour.rs  lib.rs  manager.rs  messages.rs  test_helpers.rs
crates/sierradb-topology/tests/: full_cluster_tests.rs  performance_tests.rs  regression_tests.rs  reliability_tests.rs
crates/sierradb/benches/: random_sequential.rs
crates/sierradb/examples/: basic.rs  dump.rs  validate_partition_sequences.rs
crates/sierradb/src/: bucket.rs  cache.rs  database.rs  error.rs  id.rs  lib.rs  reader_thread_pool.rs  writer_thread_pool.rs
crates/sierradb/src/bucket/: event_index.rs  iter.rs  partition_index.rs  segment.rs  stream_index.rs
crates/sierradb/src/bucket/partition_index/: closed.rs  iter.rs  open.rs
crates/sierradb/src/bucket/segment/: format.rs  iter.rs  reader.rs  writer.rs
crates/sierradb/src/bucket/stream_index/: closed.rs  iter.rs  open.rs
docs/: Coordinator Ordering and Recovery Design.md  Distributed Write Protocol Specification.md  Kameo Docs.md  Kanban.md  Sierra Docs.md  Watermarks.md  Write Protocol (old).md  api_docs.md
docs/.obsidian/: workspace.json
eventus/: Cargo.toml
eventus-cluster/: Cargo.toml
eventus-cluster/src/: error.rs  lib.rs  swarm.rs
eventus-cluster/src/swarm/: partition_actor.rs
eventus-core/: Cargo.toml
eventus-core/benches/: random_sequential.rs
eventus-core/src/: database.rs  id.rs  lib.rs  reader_thread_pool.rs
eventus-core/src/bucket/segment/: reader.rs  writer.rs
eventus/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: append.rs  commands.rs
klio/: Cargo.toml
klio-cluster/: Cargo.toml
klio-cluster/src/: behaviour.rs  error.rs  lib.rs  partition_actor.rs  swarm.rs  swarm_actor.rs  write_actor.rs
klio-cluster/src/swarm/: consensus.rs
klio-cluster/src/swarm/consensus/: gossip.rs  term_store.rs
klio-core/: Cargo.toml
klio-core/benches/: random_sequential.rs
klio-core/examples/: basic.rs  dump.rs
klio-core/src/: bucket.rs  database.rs  error.rs  lib.rs  writer_thread_pool.rs
klio-core/src/bucket/: segment.rs  stream_index.rs
klio-partition-consensus/: Cargo.toml
klio-partition-consensus/src/: behaviour.rs  lib.rs  manager.rs
klio/src/: main.rs
src/: database.rs  error.rs  id.rs  lib.rs  main.rs  swarm.rs
src/bucket/: event_index.rs  segment.rs  stream_index.rs  writer_thread_pool.rs
src/bucket/segment/: reader.rs  writer.rs
src/swarm/consensus/: leadership.rs
tests/: Cargo.toml  subscriptions.rs
