[workspace]
resolver = "3"
members = ["crates/*", "tests", "fuzz"]

[workspace.package]
authors = ["Ari Seyhun <dev@tqwewe.com>"]
categories = ["database-implementations", "development-tools"]
description = "A high-performance, distributed event store designed for scalable event sourcing applications"
edition = "2024"
homepage = "https://github.com/tqwewe/sierradb"
keywords = ["database", "event-sourcing", "distributed", "redis", "event-store"]
license = "Apache-2.0"
repository = "https://github.com/tqwewe/sierradb"
version = "0.1.0"

[workspace.dependencies]
sierradb = { path = "crates/sierradb", version = "0.1.0" }
sierradb-cluster = { path = "crates/sierradb-cluster", version = "0.1.0" }
sierradb-protocol = { path = "crates/sierradb-protocol", version = "0.1.0" }
sierradb-topology = { path = "crates/sierradb-topology", version = "0.1.0" }

arc-swap = "1.7"
arrayvec = "0.7"
arbitrary = { version = "1.4", features = ["derive"] }
bloomfilter = "3.0"
bincode = "2.0"
boomphf = "0.6"
bytes = "1.10"
config = { version = "0.15", default-features = false, features = [
  "convert-case",
  "ini",
  "json",
  "json5",
  "ron",
  "toml",
  "yaml",
] }
ciborium = "0.2"
clap = "4.5"
combine = "4.6"
crc32fast = "1.5"
criterion = "0.7"
directories = "6.0"
failsafe = "1.3"
futures = "0.3"
futures-util = "0.3"
kameo = "0.18"
libc = "0.2"
libfuzzer-sys = "0.4"
libp2p = "0.56"
num_cpus = "1.17"
once_cell = "1.21"
polonius-the-crab = "0.4"
proptest = "1.8"
rand = "0.9"
rayon = "1.11"
redis = "0.32"
redis-protocol = { version = "6.0", features = [
  "std",
  "resp3",
  "bytes",
], default-features = false }
serde = "1.0"
smallvec = "1.15"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3.23"
tokio = "1.48"
thiserror = "2.0"
thread-priority = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.18"
