[workspace]
resolver = "3"
members = ["crates/*", "tests", "fuzz"]

[workspace.package]
authors = ["Ari Seyhun <dev@tqwewe.com>"]
categories = ["database-implementations", "development-tools"]
description = "A high-performance, distributed event store designed for scalable event sourcing applications"
edition = "2024"
homepage = "https://github.com/tqwewe/sierradb"
keywords = ["database", "event-sourcing", "distributed", "redis", "event-store"]
license = "Apache-2.0"
repository = "https://github.com/tqwewe/sierradb"
version = "0.3.1"

[workspace.dependencies]
seglog = { path = "crates/seglog", version = "0.2.2" }
sierradb = { path = "crates/sierradb", version = "0.3.1" }
sierradb-cluster = { path = "crates/sierradb-cluster", version = "0.3.1" }
sierradb-protocol = { path = "crates/sierradb-protocol", version = "0.3.1" }
sierradb-topology = { path = "crates/sierradb-topology", version = "0.3.1" }

arc-swap = "1.8"
arrayvec = "0.7"
arbitrary = { version = "1.4", features = ["derive"] }
bloomfilter = "3.0"
bincode = "2.0"
boomphf = "0.6"
bytes = "1.11"
config = { version = "0.15", default-features = false, features = [
  "convert-case",
  "ini",
  "json",
  "json5",
  "ron",
  "toml",
  "yaml",
] }
ciborium = "0.2"
clap = "4.5"
combine = "4.6"
crc32fast = "1.5"
criterion = "0.8"
directories = "6.0"
failsafe = "1.3"
futures = "0.3"
futures-util = "0.3"
indexmap = "2.12"
kameo = "0.19"
libc = "0.2"
libfuzzer-sys = "0.4"
libp2p = "0.56"
moka = "0.12"
nix = "0.31"
num_cpus = "1.17"
once_cell = "1.21"
polonius-the-crab = "0.5"
proptest = "1.10"
rand = "0.10"
rayon = "1.11"
redis = "1.0"
redis-protocol = { version = "6.0", features = [
  "std",
  "resp3",
  "bytes",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
smallvec = "1.15"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.26"
tokio = "1.48"
tokio-util = "0.7"
thiserror = "2.0"
thread-priority = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.22"
zstd = "0.13"
