[package]
name = "eventus-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
eventus-core.workspace = true

arrayvec = "0.7.6"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
# tokio = { version = "1.43.0", features = ["fs", "sync"] }
# tracing = "0.1.40"
# uuid = { version = "1", features = ["serde", "v4", "v8"] }
