[package]
name = "sierradb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
sierradb.workspace = true

arbitrary = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
libfuzzer-sys = "0.4"
once_cell = "1.21.3"
smallvec.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "io-std",
  "io-util",
  "signal",
  "sync",
  "macros",
  "rt-multi-thread",
] }
uuid.workspace = true

[[bin]]
name = "append"
path = "fuzz_targets/append.rs"
test = false
doc = false
bench = false
