[package]
name = "sierradb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
sierradb.workspace = true

arbitrary = { workspace = true, features = ["derive"] }
libfuzzer-sys.workspace = true
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "io-std",
  "io-util",
  "signal",
  "sync",
  "macros",
  "rt-multi-thread",
] }
uuid = { workspace = true, features = ["v5"] }

[[bin]]
name = "append"
path = "fuzz_targets/append.rs"
test = false
doc = false
bench = false

[[bin]]
name = "commands"
path = "fuzz_targets/commands.rs"
test = false
doc = false
bench = false
