[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
sierradb.workspace = true
sierradb-cluster.workspace = true

kameo.workspace = true
libp2p.workspace = true
smallvec.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[[test]]
name = "subscriptions"
path = "subscriptions.rs"
