[package]
name = "seglog"
authors.workspace = true
categories.workspace = true
description = "High-performance segment log with CRC32C validation - optimized for event sourcing and append-only storage"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version = "0.2.2"

[dependencies]
crc32fast.workspace = true
nix = { workspace = true, features = ["fs"] }
thiserror.workspace = true
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "seglog_bench"
harness = false
