[package]
name = "sierradb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sierradb-protocol.workspace = true

clap = { workspace = true, features = ["derive"] }
futures-util = "0.3.31"
pin-project-lite = "0.2.16"
redis = "0.32.4"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"], optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v5"] }

[dev-dependencies]
ciborium = "0.2.2"
redis = { version = "0.32.4", features = ["cluster"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["aio", "tokio-comp"]
aio = ["redis/aio"]
cluster = ["redis/cluster"]
tokio-comp = ["aio", "dep:tokio", "redis/tokio-comp"]
