[package]
name = "sierradb-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
sierradb.workspace = true

arrayvec.workspace = true
bincode.workspace = true
crc32fast.workspace = true
futures.workspace = true
kameo.workspace = true
libp2p.workspace = true
libp2p.features = [
  "cbor",
  "identify",
  "gossipsub",
  "kad",
  "macros",
  "mdns",
  "ping",
  "quic",
  "request-response",
  "serde",
  "tokio",
]
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
