[package]
name = "sierradb-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
sierradb.workspace = true
sierradb-topology.workspace = true

arrayvec = { workspace = true, features = ["serde"] }
bincode.workspace = true
crc32fast.workspace = true
failsafe.workspace = true
futures.workspace = true
kameo = { workspace = true, features = ["remote"] }
libp2p.workspace = true
libp2p.features = [
  "cbor",
  "identify",
  "gossipsub",
  "macros",
  "mdns",
  "ping",
  "quic",
  "request-response",
  "serde",
  "tokio",
]
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "io-std",
  "io-util",
  "net",
  "signal",
  "sync",
  "macros",
  "rt-multi-thread",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
