[package]
name = "sierradb-protocol"
authors.workspace = true
categories.workspace = true
description = "Shared protocol types and utilities for SierraDB"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
