[package]
name = "sierradb-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sierradb"
path = "src/main.rs"

[dependencies]
sierradb.workspace = true
sierradb-cluster.workspace = true
sierradb-protocol.workspace = true

bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
directories.workspace = true
kameo.workspace = true
libp2p.workspace = true
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "io-std",
  "io-util",
  "net",
  "signal",
  "sync",
  "macros",
  "rt-multi-thread",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v4", "v5", "v8"] }
