[package]
name = "sierradb-server"
authors.workspace = true
categories.workspace = true
description = "SierraDB server - distributed event store server with Redis RESP3 protocol"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "sierradb"
path = "src/main.rs"

[dependencies]
sierradb.workspace = true
sierradb-cluster.workspace = true
sierradb-protocol.workspace = true

bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
combine = { workspace = true }
config.workspace = true
directories.workspace = true
futures.workspace = true
kameo.workspace = true
libp2p.workspace = true
redis-protocol = { workspace = true, features = ["std", "resp3", "bytes", ], default-features = false }
serde = { workspace = true, features = ["derive"] }
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "net", "signal", "sync", "macros", "rt-multi-thread", ] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v4", "v5", "v8"] }
