[package]
name = "sierradb-topology"
authors.workspace = true
categories.workspace = true
description = "SierraDB network topology management and peer discovery"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sierradb.workspace = true
arrayvec = { workspace = true, features = ["serde"] }
bincode.workspace = true
kameo = { workspace = true, features = ["remote"] }
libp2p = { workspace = true, features = ["gossipsub", "serde"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
