[package]
name = "sierradb"
version = "0.0.0"
edition = "2024"

[dependencies]
ahash = "0.8"
arc-swap = "1.7.1"
bincode = { workspace = true, features = ["serde"] }
bloomfilter = "3.0.1"
boomphf = { workspace = true, features = ["serde"] }
crc32fast.workspace = true
libc = "0.2.170"
num_cpus = "1.16.0"
polonius-the-crab = "0.4.1"
rand.workspace = true
rayon = "1.10.0"
serde = { workspace = true, features = ["derive", "rc"] }
smallvec = { workspace = true, features = ["serde"] }
thiserror.workspace = true
thread-priority = "1.2.0"
tokio = { workspace = true, features = ["fs", "sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v8"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.16"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.rust]
elided_lifetimes_in_paths = "deny"

[[bench]]
name = "random_sequential"
harness = false
