[package]
name = "sierradb"
authors.workspace = true
categories.workspace = true
description = "Core SierraDB event store library - embeddable high-performance event sourcing database"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sierradb-protocol.workspace = true

arc-swap = "1.7.1"
bincode = { workspace = true, features = ["serde"] }
bloomfilter = "3.0.1"
boomphf = { workspace = true, features = ["serde"] }
crc32fast.workspace = true
libc = "0.2.177"
num_cpus = "1.16.0"
polonius-the-crab = "0.4.1"
rand.workspace = true
rayon = "1.11.0"
serde = { workspace = true, features = ["derive", "rc"] }
smallvec = { workspace = true, features = ["serde"] }
thiserror.workspace = true
thread-priority = "3.0.0"
tokio = { workspace = true, features = ["fs", "sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v8"] }

[dev-dependencies]
criterion = "0.7"
proptest = "1.7"
tempfile = "3.23"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v5"] }

[lints.rust]
elided_lifetimes_in_paths = "deny"

[[bench]]
name = "random_sequential"
harness = false
