[package]
name = "sierradb"
authors.workspace = true
categories.workspace = true
description = "Core SierraDB event store library - embeddable high-performance event sourcing database"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
seglog.workspace = true
sierradb-protocol.workspace = true

arc-swap.workspace = true
bincode = { workspace = true, features = ["derive", "serde"] }
bloomfilter.workspace = true
boomphf = { workspace = true, features = ["serde"] }
crc32fast.workspace = true
futures.workspace = true
libc.workspace = true
moka = { workspace = true, features = ["sync"] }
nix = { workspace = true, features = ["fs"] }
num_cpus.workspace = true
polonius-the-crab.workspace = true
rand.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
smallvec = { workspace = true, features = ["serde"] }
thiserror.workspace = true
thread-priority.workspace = true
tokio = { workspace = true, features = ["fs", "sync"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v8"] }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v5"] }

[lints.rust]
elided_lifetimes_in_paths = "deny"

[[bench]]
name = "random_sequential"
harness = false
